crates/ruff_server/tests/e2e/snapshots/e2e__execute_command__format_and_optimize_imports_is_a_single_edit.snap
---
source: crates/ruff_server/tests/e2e/execute_command.rs
expression: edit
---
{
  "changes": {
    "file://<temp_dir>/test.py": [
      {
        "range": {
          "start": {
            "line": 1,
            "character": 0
          },
          "end": {
            "line": 5,
            "character": 0
          }
        },
        "newText": "\n\ndef f(a, b):\n    return a + b\n\n"
      }
    ]
  }
}
