crates/ruff_server/tests/e2e/snapshots/e2e__execute_command__optimize_imports_sorts_and_removes_unused.snap
---
source: crates/ruff_server/tests/e2e/execute_command.rs
expression: "execute_command(&mut server, \"ruff.applyOptimizeImports\", \"test.py\")"
---
{
  "changes": {
    "file://<temp_dir>/test.py": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 0
          },
          "end": {
            "line": 3,
            "character": 0
          }
        },
        "newText": "import abc\nimport sys\n"
      }
    ]
  }
}
